2018-10-16  Stuart Caie <kyzer@cabextract.org.uk>

	* src/cabinfo.c: thanks to Micah Snyder for sending some very corrupt
	files, where cabinet blocks can be found absolutely anywhere, not in
	a continguous sequence after the file entries, I found cabinfo unfit
	for purpose. I've updated it with a new output format, where the
	blocks for a folder appear immediately after each folder, rather than
	all at the end.

2018-10-16  Stuart Caie <kyzer@cabextract.org.uk>

	* src/cabextract.c: use libmspack's new MSCABD_PARAM_SALVAGE mode
	for cabextract -f, to allow extracting even more data from broken
	cabinet files.

2018-07-31  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac: drop AC_FUNC_MKTIME. Looking into it, even C89 has
	a mktime() function, the configure test is mostly checking if it
	is POSIX-conformant or not, and substitutes mktime.c if not. But
	even the replacement has no TZ handling, so it seems OK to me to
	accept the system mktime() in any case. The fnmatch() and getopt()
	substitutions remain because they enable GNU extensions that
	cabextract uses (FNM_CASEFOLD and getopt_long() respectively).
	Thanks to Stefan Haubenthal for bringing up the issue.

2018-07-28  Stuart Caie <kyzer@cabextract.org.uk>

	* src/cabinfo.c: cabinfo now supports examining more than one file

2018-07-17  Stuart Caie <kyzer@cabextract.org.uk>

	* amibuild.sh: support using setlocale()/iconv() in the OS4 version.

	* amibuild.sh: build the 68K version with -noixemul so the resulting
	executable doesn't need ixemul.library, libnix is used instead.
	Because libnix has no umask(), add a HAVE_UMASK feature test.

	* src/cabextract.c: add a new feature flag, LATIN1_FILENAMES,
	which should be defined if the host environment expects ISO-8859-1
	filenames rather than UTF-8. This adds in a step to translate
	even UTF-8 filenames to ISO-8859-1.  It's only enabled for the
	Amiga build so far.

2018-03-07  Stuart Caie <kyzer@cabextract.org.uk>
